# AgentConsoleBackend

./: .env.dev  .env.example  .env.prod  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  Dockerfile  Makefile  README.md  api_responses.json  chatgpt_api_response_20260412_102400.json  chatgpt_raw_response.json  docker-compose.yml  frame_questions_raw_response.json  groq_inprocess_response.json  groq_live_response.json  main.py  pyproject.toml  pytest.ini  received_frame_questions_payload.json  received_patient_data.json  requirements.txt  sample_request_body.json  test.json  test.py  undertand_patient_data_response.txt
Data/: care_gap_reports_mock.xlsx  ehr_clinical_notes_mock.xlsx  insurance_claims_mock.xlsx  lab_results_mock.xlsx  medication_list_mock.xlsx  patient_demographics_mock.xlsx  pharmacy_claims_mock.xlsx  prior_auth_mock.xlsx
app/: main.py
app/api/: __init__.py
app/api/routes/: care_gaps.py  ehr_notes.py  health.py  insurance_claims.py  lab_results.py  medications.py  patients.py  pharmacy_claims.py  prior_auth.py
app/api/routes/ai_routes/: __init__.py  frame_questions.py  mock_chatgpt_response.json  undertand_patient_data.py
app/core/: config.py  constants.py  data_loader.py
app/models/: base.py
app/schemas/: __init__.py
app/utils/: logger.py
prompts/ai/: undertand_patient_data.prompt.txt  undertand_patient_data_v2.prompt.txt
tests/: conftest.py  test_all_routes.py  test_api.py  test_health.py
