[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vedara-agent-console-api"
version = "1.0.0"
description = "Production-ready FastAPI application for Vedara Agent Console"
requires-python = ">=3.9"
authors = [
    {name = "Development Team"}
]
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/yourusername/vedara-agent-console"
Repository = "https://github.com/yourusername/vedara-agent-console.git"
Issues = "https://github.com/yourusername/vedara-agent-console/issues"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pylint]
max-line-length = 100
